Move to flax and start radlibs?

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Daisy Zone</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="{{ url_for('static',filename='styles.css') }}">
 </head>
 <body>
 <h1>this is daisy.zone</h1>
@@ -22,6 +22,9 @@ github: <a href="https://github.com/daisyzhou">daisyzhou</a>
 <br/>
 the ol' LinkedIn: <a href="https://www.linkedin.com/in/daisy-zhou-447a3925">Daisy Zhou, very cool software engineer</a>
 <br/>
+
+<h3>small babies</h3>
+<a href="/radlibs">rad libs</a>
 
 </body>
 </html>
