move to flask and add rad libs

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@ github: <a href="https://github.com/daisyzhou">daisyzhou</a>
 the ol' LinkedIn: <a href="https://www.linkedin.com/in/daisy-zhou-447a3925">Daisy Zhou, very cool software engineer</a>
 <br/>
 
-<h3>small babies</h3>
+<h3>small baby projects</h3>
 <a href="/radlibs">rad libs</a>
 
 </body>
